charts/all/homebox/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 7745
  selector:
    app: homebox
