charts/all/homebox/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: homebox
spec:
  #host: your-app.example.com
  to:
    kind: Service
    name: homebox
  port:
    targetPort: 80   # Replace with your service's target port
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
